--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body{
 }
 .menu{
   width: 100%;
-  height: 800px;
   color: var(--font-color);
 }
 span{
@@ -72,6 +71,7 @@ span{
 /* home */
 
 .home{
+  height: 800px;
   background: var(--bg-home);
 }
 .home header{
@@ -216,6 +216,7 @@ span{
 /* about */
 
 .about{
+   height: 800px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -292,6 +293,7 @@ span{
   -o-transform: rotate(180deg);
 }
 .projects{
+  height: 800px;
   background: var(--projects-bg);
   overflow: hidden;
 }
@@ -344,6 +346,7 @@ span{
 /* achievement */
 
 .achievement{
+  height: 1200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -356,10 +359,10 @@ span{
   justify-content: center;
   align-items: center;
   width: 1500px;
-  height: 650px;
+  height: 700px;
 }
 .achievement main .titleWrapper{
-  margin-top: 50px;
+  /* margin-top: 10px; */
 }
 .achievement main .winWrapper{
   margin-top: 30px;
@@ -395,6 +398,17 @@ span{
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+}
+.achievement main .winWrapper .winBox3{
+  background-image: url('assets/jumpa.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  background-position-y: 190%;
 }
 .achievement .winWrapper .winBox .keterangan{
   display: flex;
